# codedrift

./: .gitignore  LICENSE  PROJECT_MASTER.md  README.md  benchmark.py  pyproject.toml
codedrift/: __init__.py  analytics.py  api.py  cli.py  db.py  differ.py  doctor.py  formatter.py  git_utils.py  indexer.py  mcp_server.py  memory.py  overview.py  redactor.py  resolver.py  savings.py  search.py  session_parser.py  skill.py
codedrift/_dashboard/: index.html
codedrift/_dashboard/assets/: index-DSMOqEuy.css  index-Dhzr9wql.js
codedrift/languages/: __init__.py  base.py  go_lang.py  javascript_lang.py  python_lang.py  rust_lang.py
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: ErrorBanner.tsx  FreshnessWarning.tsx  LoadingSpinner.tsx  StatCard.tsx
dashboard/src/hooks/: useQueries.ts
dashboard/src/sections/: ActivityTimeline.tsx  IndexHealth.tsx  IndexHistory.tsx  MemoryHitRate.tsx  ResponseSize.tsx  SymbolHeatmap.tsx  TokenSavings.tsx  ToolUsage.tsx
tests/: conftest.py  test_indexer.py  test_resolver.py  test_root_detection.py  test_search.py
tests/fixtures/go_project/: main.go
tests/fixtures/js_project/src/: auth.js
tests/fixtures/python_project/: api.py
tests/fixtures/python_project/auth/: jwt.py
tests/fixtures/python_project/tests/: test_jwt.py
