[project]
name = "codedrift"
version = "0.1.0"
description = "Eliminate token waste in AI coding agents"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "click>=8.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-language-pack>=0.2.0",
]

[project.scripts]
codedrift = "codedrift.cli:main"

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
memory = ["sentence-transformers>=2.0", "numpy>=1.24"]
redact = ["onnxruntime>=1.18", "tokenizers>=0.19", "huggingface_hub>=0.24", "numpy>=1.24"]
all = ["mcp>=1.0", "sentence-transformers>=2.0", "numpy>=1.24", "onnxruntime>=1.18", "tokenizers>=0.19", "huggingface_hub>=0.24"]
dev = ["pytest>=7.0", "pytest-cov"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["codedrift*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
